--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # 前端 API 配置
-VITE_API_BASE_URL=http://localhost:3007/api
+VITE_API_BASE_URL=https://pathology-backend-api.zeabur.app/api
 
-# 生产环境会被覆盖为实际的 Railway URL
-# 例如: https://your-project.railway.app/api
+# 开发环境可以使用本地地址
+# VITE_API_BASE_URL=http://localhost:3007/api
