--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/uuid": "^9.0.7",
     "@vitejs/plugin-react": "^5.0.0",
     "nodemon": "^3.0.2",
+    "terser": "^5.19.2",
     "ts-node": "^10.9.1",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
