--- a/.env
+++ b/.env
@@ -1,5 +1,22 @@
-# 前端 API 配置
-VITE_API_BASE_URL=https://pathology-backend-api.zeabur.app/api
+# 前端 API 配置 - 本地开发
+VITE_API_BASE_URL=http://localhost:3001/api
 
-# 开发环境可以使用本地地址
-# VITE_API_BASE_URL=http://localhost:3007/api
+# 数据库配置
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=root123456
+DB_NAME=pathologic_ai_platform
+DB_PORT=3306
+
+# JWT配置
+JWT_SECRET=your_jwt_secret_key_here_change_in_production
+
+# 服务器配置
+PORT=3001
+NODE_ENV=development
+
+# 文件上传配置
+UPLOAD_DIR=uploads
+
+# 前端URL
+FRONTEND_URL=http://localhost:3000
